<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherApp</string>
    <string name="moonrisename">moonrise</string>
    <string name="moonsetname">moonset</string>
    <string name="nextnewmoonname">next new moon</string>
    <string name="nextfullmoonname">next full moon</string>
    <string name="illuminationname">illumination</string>
    <string name="monthagename">month age</string>
    <string name="sunrisename">sunrise</string>
    <string name="azimuthname">azimuth</string>
    <string name="sunsetname">sunset</string>
    <string name="twilightsunrisename">twilight sunrise</string>
    <string name="twilightsunsetname">twilight sunset</string>
    <string name="moon">Moon</string>
    <string name="sun">Sun</string>
    <string name="zatwierdz">Accept</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="refresh">refresh period</string>
    <string name="timername" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="current_cityname">city name</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="imperial_units">imperial units</string>
    <string name="reload_weather">reload weather</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
</resources>