<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michalparysz.weatherapp.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="344dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/latitudeInput"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="13sp"
                            android:hint="@string/latitude"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/longitudeInput"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:inputType="number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="13sp"
                            android:hint="@string/longitude" />
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/zatwierdz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/zatwierdz" />
            </TableRow>


            <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
                <Button
                android:id="@+id/sunButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                />

                <Button
                android:id="@+id/moonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moon"/>
            </TableRow>
        </TableLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_marginTop="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </android.support.v4.view.ViewPager>

</android.support.constraint.ConstraintLayout>
